@@ -46,6 +46,7 @@ comment "Testing"
 source make/jamvm/Config.in
 source make/classpath/Config.in
 source make/lua/Config.in
+source make/matrixtunnel/Config.in
 source make/mini_fo/Config.in
 source make/ntfs/Config.in
 source make/streamripper/Config.in
