@@ -1,6 +1,6 @@
 config DS_PACKAGE_JAMVM
 	bool "jamvm 1.4.4 (binary only)"
-	depends on DS_PACKAGE_classpath
+	select DS_PACKAGE_classpath
 	default n
 	help
 	    Extremely small Java VM
