@@ -1,0 +1,8 @@
+config DS_PACKAGE_MATRIXTUNNEL
+	bool "matrixtunnel 1.0 (binary only)"
+	select DS_LIB_libmatrixssl
+	select DS_LIB_libpthread
+	default n
+	help
+	    SSL tunnel based on matrixssl. Matrixtunnel is a stripped down version of stunnel based on matrixssl library. 
+	    
