@@ -1,3 +1,6 @@
+revision 38:
+- added matrixssl-1-8-3-open (lib)
+- added matrixtunnel-0.2 (package)
 revision 36:
 - added Rudi-Shell
 revision 35:
